Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/admin/lims/index.xhtml
+++ b/src/main/webapp/admin/lims/index.xhtml
@@ -27,10 +27,14 @@
                                                        value="List categories" 
                                                        action="#{investigationCategoryController.navigateToListInvestigationCategories}" />
 
+                                    <p:commandButton   class="w-100"  ajax="false" 
+                                                       value="Add Tube" 
+                                                       action="#{investigationTubeController.navigateToAddTube()}" />
 
                                     <p:commandButton   class="w-100"  ajax="false" 
-                                                       value="categories" 
-                                                       action="#{investigationController.navigateToAddInvestigationForAdmin()}" />
+                                                       value="List Tubes" 
+                                                       action="#{investigationTubeController.navigateToListTubes()}" />
+
                                     <p:commandButton   
                                         class="w-100" 
                                         ajax="false" 
