--- a/src/main/webapp/lab/investigation_values.xhtml
+++ b/src/main/webapp/lab/investigation_values.xhtml
@@ -77,7 +77,8 @@
 
 
                                 <p:commandButton id="btnMatch" value="Make All to Match Investigation" 
-                                                 ajax="false" action="#{investigationItemController.makeAllIxItemsToMachIxDetails}">
+                                                 ajax="false" 
+                                                 action="#{investigationItemController.makeAllIxItemsToMachIxDetails}">
                                 </p:commandButton>
                                 
                                 
