Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/admin/users/list_users.xhtml
+++ b/src/main/webapp/admin/users/list_users.xhtml
@@ -19,7 +19,7 @@
                                         ajax="false" 
                                         value="Remove" 
                                         class="m-1"
-                                        onclick="if (!confirm('Are you sure you want to Cancel This Bill ?'))
+                                        onclick="if (!confirm('Are you sure you want to Remove User?'))
                                                     return false;" 
                                         action="#{webUserController.removeUser}">
                                     </p:commandButton>
