--- a/src/main/webapp/admin/users/view_user.xhtml
+++ b/src/main/webapp/admin/users/view_user.xhtml
@@ -8,7 +8,7 @@
 
     <h:body>
 
-        <ui:composition template="/admin/users/admin_view_user.xhtml">
+        <ui:composition template="/admin/users/list_users.xhtml">
 
             <ui:define name="users">
 
