--- a/src/main/webapp/admin/users/admin_user_department.xhtml
+++ b/src/main/webapp/admin/users/admin_user_department.xhtml
@@ -12,7 +12,7 @@
 
     <h:body>
 
-        <ui:composition template="/admin/users/admin_view_user.xhtml">
+        <ui:composition template="/admin/users/list_users.xhtml">
 
             <ui:define name="users">
 
