--- a/src/main/webapp/admin/users/admin_user_privilages.xhtml
+++ b/src/main/webapp/admin/users/admin_user_privilages.xhtml
@@ -9,7 +9,7 @@
 
     <h:body>
 
-        <ui:composition template="/admin/users/admin_view_user.xhtml">
+        <ui:composition template="/admin/users/list_users.xhtml">
 
 
             <ui:define name="users">
