--- a/src/main/webapp/admin/users/user_logins.xhtml
+++ b/src/main/webapp/admin/users/user_logins.xhtml
@@ -8,7 +8,7 @@
 
     <h:body>
 
-        <ui:composition template="/admin/users/admin_manage_users.xhtml">
+        <ui:composition template="/admin/users/index.xhtml">
 
             <ui:define name="subcontent">
                 <h:form>
