Closes#815 Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/admin/users/index.xhtml
+++ b/src/main/webapp/admin/users/index.xhtml
@@ -25,6 +25,12 @@
                                             ajax="false" 
                                             value="View User Logins" 
                                             action="#{loginController.navigateToViewLogins()}" />
+                                        <p:commandButton 
+                                            ajax="false" 
+                                            class="m-1"
+                                            value="To Remove Multiple Users" 
+                                            action="#{webUserController.navigateToRemoveMultipleUsers()}"
+                                            />
                                     </div>
                                 </p:tab>
                             </p:accordionPanel>
