--- a/src/main/webapp/resources/autocomplete/institution.xhtml
+++ b/src/main/webapp/resources/autocomplete/institution.xhtml
@@ -12,7 +12,7 @@
 
     <!-- IMPLEMENTATION -->
     <cc:implementation>
-        <p:autoComplete completeMethod="#{institutionController.completeCompany}" 
+        <p:autoComplete completeMethod="#{institutionController.completeIns}" 
                         var="dept" itemLabel="#{dept.name}"
                         itemValue="#{dept}" forceSelection="true" 
                         value="#{cc.attrs.value}" styleClass="mediuminput"
