--- a/src/main/webapp/admin/users/user_list.xhtml
+++ b/src/main/webapp/admin/users/user_list.xhtml
@@ -14,24 +14,42 @@
                     <h:form  >
                         <div class="container-fluid p-2" >
                             <div class="row" >
+                                <div class="col-md-6" >
+                                    <ui:insert name="users" >
+                                        <p:dataTable id="lstSelect" 
+                                                     value="#{webUserController.webUseLights}" 
+                                                     var="u"
+                                                     rowKey="#{u.id}"
+                                                     selection="#{webUserController.selectedLight}" 
+                                                     rows="10" 
+                                                     selectionMode="single"
+                                                     paginator="true"
+                                                     paginatorAlwaysVisible="false"
+                                                     paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                                                     rowsPerPageTemplate="10,50,100,500"
+                                                     >
+                                            <p:ajax event="rowSelect" process="@this" update=":#{p:resolveFirstComponentWithId('actions',view).clientId}" ></p:ajax>
+                                            <p:ajax event="rowUnselect" process="@this" update=":#{p:resolveFirstComponentWithId('actions',view).clientId}" ></p:ajax>
+                                            <p:column headerText="User Name" 
+                                                      sortBy="#{u.userName}" 
+                                                      filterBy="#{u.userName}"
+                                                      filterMatchMode="contains">
+                                                <h:outputText value="#{u.userName}"/>
+                                            </p:column>
+                                        </p:dataTable>
+                                    </ui:insert>
+                                </div>
                                 <h:panelGroup id="actions" class="col-md-3 col-md-3 d-flex flex-column" >
                                     <p:commandButton   
                                         ajax="false" 
+                                        disabled="#{webUserController.selected == null}"  
                                         value="Remove" 
                                         class="m-1"
                                         onclick="if (!confirm('Are you sure you want to Remove User?'))
                                                     return false;" 
                                         action="#{webUserController.removeUser}">
                                     </p:commandButton>
-                                    <p:commandButton 
-                                        ajax="false" 
-                                        rendered="false"
-                                        class="m-1"
-                                        value="Remove Selected" 
-                                        action="#{webUserController.removeMultipleUsers()}"
-                                        onclick="if (!confirm('Are you sure you want to delete this record?'))
-                                                    return false;"
-                                        />
+
                                     <p:commandButton 
                                         disabled="#{webUserController.selected == null}"  
                                         value="Manage User" 
@@ -82,33 +100,6 @@
                                         class="m-1"/>
 
                                 </h:panelGroup>
-                                <div class="col-md-9" >
-
-                                    <ui:insert name="users" >
-                                        <p:dataTable id="lstSelect" 
-                                                     value="#{webUserController.webUseLights}" 
-                                                     var="u"
-                                                     rowKey="#{u.id}"
-                                                     selection="#{webUserController.selectedLight}" 
-                                                     rows="100" 
-                                                     selectionMode="single"
-                                                     paginator="#{commonController.renderPaginator(webUserController.selectedItems, 10)}"
-                                                     paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                                     rowsPerPageTemplate="10,50,100,500"
-                                                     >
-                                            <p:ajax event="rowSelect" process="@this" update=":#{p:resolveFirstComponentWithId('actions',view).clientId}" ></p:ajax>
-                                            <p:ajax event="rowUnselect" process="@this" update=":#{p:resolveFirstComponentWithId('actions',view).clientId}" ></p:ajax>
-                                            <p:column headerText="User Name" 
-                                                      sortBy="#{u.userName}" 
-                                                      filterBy="#{u.userName}"
-                                                      filterMatchMode="contains">
-                                                <h:outputText value="#{u.userName}"/>
-                                            </p:column>
-                                        </p:dataTable>
-                                    </ui:insert>
-
-
-                                </div>
                             </div>
                         </div>
                     </h:form>
