--- a/src/main/webapp/pharmacy/admin/vtm.xhtml
+++ b/src/main/webapp/pharmacy/admin/vtm.xhtml
@@ -7,7 +7,7 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:se="http://java.sun.com/jsf/composite/pharmacy/search">
     <h:body>
-        <ui:composition template="/pharmacy/pharmacy_admin.xhtml">
+        <ui:composition template="/pharmacy/admin/index.xhtml">
             <ui:define name="subcontent">
                 <h:panelGroup >
                     <h:form id="form"  >
