--- a/src/main/webapp/pharmacy/pharmacy_report_non_moving_items.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_non_moving_items.xhtml
@@ -9,7 +9,7 @@
 
     <h:body>
 
-        <ui:composition template="/pharmacy/pharmacy_admin.xhtml">
+        <ui:composition template="/pharmacy/admin/index.xhtml">
 
             <ui:define name="subcontent">
                 <h:form>
