--- a/src/main/webapp/pharmacy/pharmacy_variant_ajustment_pre_list.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_variant_ajustment_pre_list.xhtml
@@ -7,7 +7,7 @@
       xmlns:f="http://java.sun.com/jsf/core">
 
     <h:body>
-        <ui:composition template="/pharmacy/pharmacy_admin.xhtml">
+        <ui:composition template="/pharmacy/admin/index.xhtml">
             <ui:define name="subcontent">
                 <h:form>
                     <p:panel header="Search Bills" >
